--- a/grupa1/laborator23/composer.json
+++ b/grupa1/laborator23/composer.json
@@ -2,7 +2,7 @@
     "name": "php/laborator23",
     "version": "0.0.0",
     "scripts": {
-        "dev" : "php -S localhost:8888 public/index.php"
+        "dev" : "php -S localhost:8888 -t public public/index.php"
     },
     "require": {
         "slim/slim": "4.*",
